# cpp_babel

./: .editorconfig  .gitignore  CMakeLists.txt  Command.cpp  Command.hpp  CommandManager.hpp  Makefile  README.md
audioLib/portaudio/: Makefile  config.status  libtool
audioLib/portaudio/examples/: paex_read_write_wire.c
audioLib/portaudio/lib/.libs/: libportaudio.so.2.0.0
client/: Makefile  babel  babel.pro  login.ui  main.cpp  mainwindow.ui  moc_Login.cpp  moc_MainWindow.cpp  resources.qrc
client/headers/: Login.hpp  MainWindow.hpp
client/inc/: ClientCore.hpp  Login.hpp  MainWindow.hpp
client/sources/: addFont.cpp  main.cpp  usage.cpp
client/src/: ClientCore.cpp
clientTest/: main.cpp
clientTest/inc/: ClientCore.hpp
clientTest/src/: ClientCore.cpp
implementations/: IMutex.hpp  IRunnable.hpp  ImplementationFactory.cpp  ImplementationFactory.hpp  MutexScopedLock.cpp  UnixMutex.cpp  UnixThread.cpp  UnixThread.hpp
implementations/mutex/: MutexScopedLock.hpp  UnixMutex.hpp
implementations/network/: ABoostTCPNetwork.cpp  ABoostTCPNetwork.hpp  BoostTCPClient.cpp  BoostTCPClient.hpp  BoostTCPNetwork.cpp  BoostTCPNetwork.hpp  BoostTCPServer.cpp  BoostTCPServer.hpp  IClient.hpp  INetwork.hpp  IServer.hpp  a.out
implementations/thread/: IThread.hpp
inc/: APlugin.hh  BabbelAudio.hh  BabbelOpus.hh  BabelAudio.hh  BabelOpus.hh  PlugAudio.hh  PluginAudio.hh
modules/command/inc/: ACommand.hpp  Command.hpp  CommandInterpreter.hpp  MainMutex.hpp
modules/command/src/: ACommand.cpp  Command.cpp  CommandInterpreter.cpp
modules/errors/inc/: Errors.hpp
modules/errors/src/: Errors.cpp
modules/implementations/inc/: ImplementationFactory.hpp
modules/implementations/src/: ImplementationFactory.cpp
modules/network/inc/: BoostTCPClient.hpp  BoostTCPNetwork.hpp  BoostTCPServer.hpp  IClient.hpp  INetwork.hpp  IServer.hpp  QtTCPClient.hpp  QtUDPClient.hpp  UnixTCPClient.hpp  UnixUDPClient.hpp  UnixUDPServer.hpp
modules/network/src/: BoostTCPClient.cpp  BoostTCPNetwork.cpp  BoostTCPServer.cpp  QtTCPClient.cpp  QtUDPClient.cpp  UnixTCPClient.cpp  UnixUDPClient.cpp  UnixUDPServer.cpp
modules/plugins/inc/: APlugin.hh  PlugAudio.hh
modules/plugins/src/: APlugin.cpp  PlugAudio.cpp  main_test.cpp
server/: Makefile  main.cpp
server/inc/: CommandInterpreter.hpp  Core.hpp  ServerCore.hpp
server/src/: CommandInterpreter.cpp  Core.cpp  ServerCore.cpp
src/: APlugin.cpp  BabbelAudio.cpp  BabbelOpus.cpp  BabelAudio.cpp  BabelOpus.cpp  PlugAudio.cpp  PluginAudio.cpp  main_test.cpp
